structure - phase 1 - implemented project structure with all its dependencies

--- a/development.env
+++ b/development.env
@@ -1,4 +1,8 @@
+# project properties
 NODE_ENV=development
 PORT=3000
 SWAGGER_SCHEMA=http
+# redis properties
+REDIS_HOST=localhost
+REDIS_PORT=6379
 
