--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "@nestjs/swagger": "^3.0.2",
     "dotenv": "^8.2.0",
     "inspirational-quotes": "^1.0.8",
+    "moment": "^2.24.0",
     "redis": "^2.8.0",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
     "rxjs": "^6.2.2",
     "swagger-ui-express": "^4.0.7",
-    "typescript": "^3.0.1"
+    "typescript": "^3.0.1",
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
     "@nestjs/testing": "^5.1.0",
