--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/common": "^5.4.0",
     "@nestjs/core": "^5.4.0",
     "@nestjs/swagger": "^3.0.2",
+    "bluebird": "^3.7.1",
     "dotenv": "^8.2.0",
     "inspirational-quotes": "^1.0.8",
     "moment": "^2.24.0",
